--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ out
 # Next.js
 .next
 
+# Turbo
+.turbo
+.turbo/*
+
 # Vercel
 .vercel
 
@@ -20,6 +24,9 @@ out
 # Env
 .env
 .env*.local
+
+# Logs
+*.log
 
 # Temp
 .temp
