--- a/releaf-front/package.json
+++ b/releaf-front/package.json
@@ -55,12 +55,14 @@
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
     "next": "15.4.5",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
     "react-intersection-observer": "^9.16.0",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.7",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "tiptap-extension-resize-image": "^1.3.2",
