feat: 인기 중고책 목록 기능 추가, 판매 카드 UI 개선, 인기 리뷰 목록에 모바일 스와이퍼 적용

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "turbo test"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "turbo": "latest"
+    "turbo": "2.6.3",
+    "typescript": "^5.0.0"
   },
   "packageManager": "pnpm@9.4.0"
 }
