--- a/releaf-front/package.json
+++ b/releaf-front/package.json
@@ -61,6 +61,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
     "react-intersection-observer": "^9.16.0",
+    "react-kakao-maps-sdk": "^1.2.0",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "swiper": "^11.2.10",
