feat: 홈, 중고마켓 및 리뷰 페이지 query stale time 설정

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "dev": "turbo dev",
     "build": "turbo build",
+    "clean": "rm -rf .turbo bookjeok-front/.next bookjeok-front/.turbo bookjeok-back/dist",
+    "build:clean": "pnpm clean && pnpm build",
     "start": "turbo start",
     "lint": "turbo lint",
     "test": "turbo test"
