--- a/bookjeok-front/package.json
+++ b/bookjeok-front/package.json
@@ -49,6 +49,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
     "@vercel/speed-insights": "^1.2.0",
+    "apexcharts": "^5.3.6",
     "axios": "^1.11.0",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
@@ -63,6 +64,7 @@
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
+    "react-apexcharts": "^1.9.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
     "react-intersection-observer": "^9.16.0",
