--- a/bookjeok-front/package.json
+++ b/bookjeok-front/package.json
@@ -6,11 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "DEBUG_PRINT_LIMIT=100 jest",
-    "test:watch": "jest --watch",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "lint": "next lint"
   },
   "packageManager": "pnpm@9.4.0",
   "engines": {
@@ -79,43 +75,23 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.1.3",
     "@eslint/eslintrc": "^3",
-    "@storybook/addon-a11y": "^10.1.0",
-    "@storybook/addon-docs": "^10.1.0",
-    "@storybook/addon-onboarding": "^10.1.0",
-    "@storybook/addon-vitest": "^10.1.0",
-    "@storybook/nextjs-vite": "^10.1.0",
     "@swc/core": "^1.13.5",
-    "@swc/jest": "^0.2.39",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.19",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
     "@types/dompurify": "^3.2.0",
-    "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@vitest/browser-playwright": "^4.0.14",
-    "@vitest/coverage-v8": "^4.0.14",
     "eslint": "^9.34.0",
     "eslint-config-next": "15.5.7",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-storybook": "^10.1.0",
-    "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0",
-    "playwright": "^1.57.0",
     "prettier": "^3.6.2",
-    "storybook": "^10.1.0",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5",
-    "typescript-eslint": "^8.42.0",
-    "vite": "^7.2.4",
-    "vitest": "^4.0.14"
+    "typescript-eslint": "^8.42.0"
   }
 }
