--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "turbo": "2.7.2",
     "typescript": "^5.0.0"
   },
-  "packageManager": "pnpm@9.15.1"
+  "packageManager": "pnpm@9.15.1",
+  "engines": {
+    "node": "20.x"
+  }
 }
